Fix overflow of some featured items

--- a/wwm_rubik_style.scss
+++ b/wwm_rubik_style.scss
@@ -242,7 +242,6 @@ div#toolbar div.toolbar-shortcuts ul {
     .view-content {
       display: flex;
       flex-flow: row wrap;
-      overflow: auto;
     }
 
     .views-row {
@@ -3639,6 +3638,10 @@ td:not([class]) {
 
             iframe {
               max-width: 100%;
+            }
+
+            .field-content {
+              overflow: auto;
             }
           }
         }
